highlight code breakline

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                         <lib :id="5" category="pgfplots" chname="间隙填充库" libname="fillbetween" customized="0"></lib>
                     </div>
                 </details>
-                <details open="true">
+                <details id="data" open="true">
                     <summary>
                         数据
                     </summary>
@@ -381,7 +381,7 @@
             var instance = Split(['#panel-one','#panel-two','#panel-three'],{
                 sizes:[30,35,35],
                 // minSize: [400,400,0],
-                minSize: [0,0,0],
+                minSize: [300,300,0],
                 // expandToMin: true,
                 direction: 'horizontal',
             });
