--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <text x="102" y="28" style="font-size:x-large">T</text>
                 <text x="114" y="33" style="font-size:x-large">E</text>
                 <text x="126" y="28" style="font-size:x-large">X</text>
-                </svg></a> · <a href="https://github.com/LogCreative/PGFPlotsEdt" target="_blank">PGFPlots 代码生成器</a> · 原型机
+                </svg></a> · <a href="https://github.com/LogCreative/PGFPlotsEdt" target="_blank">PGFPlots 代码生成器 </a><div id="version" style="display: inline-block;"></div>
             <div id="extlinks">
                 <div>
                     <a href="https://mirrors.rit.edu/CTAN/graphics/pgf/contrib/pgfplots/doc/pgfplots.pdf" target="_blank">PGFPlots 手册</a>
@@ -367,6 +367,7 @@
     <script src="https://cdn.bootcdn.net/ajax/libs/highlight.js/10.5.0/languages/latex.min.js"></script>
     <link href="https://cdn.bootcdn.net/ajax/libs/highlight.js/10.5.0/styles/vs.min.css" rel="stylesheet">
     <script src="https://cdn.bootcdn.net/ajax/libs/split.js/1.6.2/split.min.js"></script>
+    <script src="lang/getversion.js"></script>
     <script src="lang/sparamdic_cn.js"></script>
     <script src="lang/directive_cn.js"></script>
     <script src="main.js"></script>
