--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
                                     <option value="1">x对数轴</option>
                                     <option value="2">y对数轴</option>
                                     <option value="3">双对数轴</option>
+                                    <option value="4" v-show="enablepolar">极坐标轴</option>
                                 </select>
                             </td>
                         </tr>
@@ -102,6 +103,7 @@
                         <lib category="selectcolormodel" chname="CMYK模式" libname="cmyk" customized="1"></lib>
                         <lib :id="4" category="pgfplots" chname="统计库" libname="statistics" customized="0"></lib>
                         <lib :id="5" category="pgfplots" chname="间隙填充库" libname="fillbetween" customized="0"></lib>
+                        <lib :id="6" category="pgfplots" chname="极坐标库" libname="polar" customized="0"></lib>
                     </div>
                 </details>
                 <details id="data" open="true">
@@ -179,7 +181,7 @@
         
     </div>
     <template id="libtpl">
-        <td><input type="checkbox" v-model="enabled" @change="onlibchange">{{chname}}</input></td>
+        <div class="libchecker"><input type="checkbox" v-model="enabled" @change="onlibchange">{{chname}}</input></div>
     </template>
     <template id="parambartpl">
         <div class="parambar" style="display: block;">
