pre-cleaned colorbrewer

--- a/index.html
+++ b/index.html
@@ -376,9 +376,9 @@
     <script src="https://cdn.bootcdn.net/ajax/libs/highlight.js/10.5.0/languages/latex.min.js"></script>
     <link href="https://cdn.bootcdn.net/ajax/libs/highlight.js/10.5.0/styles/vs.min.css" rel="stylesheet">
     <script src="https://cdn.bootcdn.net/ajax/libs/split.js/1.6.2/split.min.js"></script>
-    <script src="lang/getversion.js"></script>
-    <script src="lang/sparamdic_cn.js"></script>
-    <script src="lang/directive_cn.js"></script>
+    <script src="js/getversion.js"></script>
+    <script src="js/sparamdic_cn.js"></script>
+    <script src="js/directive_cn.js"></script>
     <script src="main.js"></script>
     <script>
         if(document.body.clientWidth>900){
