--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
                         <lib :id="4" category="pgfplots" chname="统计库" libname="statistics" customized="0"></lib>
                         <lib :id="5" category="pgfplots" chname="间隙填充库" libname="fillbetween" customized="0"></lib>
                         <lib :id="6" category="pgfplots" chname="极坐标库" libname="polar" customized="0"></lib>
+                        <lib :id="7" category="pgfplots" chname="日期库" libname="dateplot" customized="0"></lib>
                     </div>
                 </details>
                 <details id="data" open="true">
