--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                         <highlightjs language='latex' :code="premable" />
                     </div>
                     <div class="texCode" id="texContent">
-                        <highlightjs language='latex' :code="content"/>
+                        <highlightjs language='latex' :code="dc_content"/>
                     </div>
                     <div class="texCode">
                         <highlightjs language='latex' :code="suffix"/>
