--- a/index.html
+++ b/index.html
@@ -171,6 +171,9 @@
                     <div class="texCode" id="texContent">
                         <highlightjs language='latex' :code="dc_content"/>
                     </div>
+                    <div class="texCode" id="texContent_ndc">
+                        <highlightjs language='latex' :code="content"/>
+                    </div>
                     <div class="texCode">
                         <highlightjs language='latex' :code="suffix"/>
                     </div>
