--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
                     <div>
                         <lib :id="1" category="tikz" chname="标记库" libname="plotmarks" customized="0"></lib>
                         <lib :id="2" category="pgfplots" chname="颜色库" libname="colorbrewer" customized="0"></lib>
+                        <lib :id="3" category="pgfplots" chname="渐变库" libname="colormaps" customized="0"></lib>
                         <lib category="selectcolormodel" chname="CMYK模式" libname="cmyk" customized="1"></lib>
                         <lib :id="4" category="pgfplots" chname="统计库" libname="statistics" customized="0"></lib>
                         <lib :id="5" category="pgfplots" chname="间隙填充库" libname="fillbetween" customized="0"></lib>
@@ -373,8 +374,8 @@
     <script src="https://cdn.bootcdn.net/ajax/libs/highlight.js/10.5.0/languages/latex.min.js"></script>
     <link href="https://cdn.bootcdn.net/ajax/libs/highlight.js/10.5.0/styles/vs.min.css" rel="stylesheet">
     <script src="https://cdn.bootcdn.net/ajax/libs/split.js/1.6.2/split.min.js"></script>
-    <script src="js/getversion.js"></script>
-    <script src="js/sparamdic_cn.js"></script>
+    <script src="js/getVersion.js"></script>
+    <script src="js/dict_cn.js"></script>
     <script src="js/style_cn.js"></script>
     <script src="main.js"></script>
     <script>
