--- a/index.html
+++ b/index.html
@@ -68,18 +68,18 @@
                             <property chname="轴题" propkey="xlabel"></property>
                             <property chname="最小" propkey="xmin"></property>
                             <property chname="最大" propkey="xmax"></property>
-                            <propertyselect chname="箭头" propkey="axis x line" :options="['top','middle','bottom']"></propertyselect>
+                            <propertyselect chname="箭头" propkey="axis x line" :options="['top','middle','bottom','none']"></propertyselect>
                             <tr>y轴</tr>
                             <property chname="轴题" propkey="ylabel"></property>
                             <property chname="最小" propkey="ymin"></property>
                             <property chname="最大" propkey="ymax"></property>
-                            <propertyselect chname="箭头" propkey="axis y line" :options="['left','middle','right']"></propertyselect>
+                            <propertyselect chname="箭头" propkey="axis y line" :options="['left','middle','right','none']"></propertyselect>
                         <div v-show="td">
                             <tr>z轴</tr>
                             <property chname="轴题" propkey="zlabel"></property>
                             <property chname="最小" propkey="zmin"></property>
                             <property chname="最大" propkey="zmax"></property>
-                            <propertyselect chname="箭头" propkey="axis z line" :options="['left','middle','right']"></propertyselect>
+                            <propertyselect chname="箭头" propkey="axis z line" :options="['left','middle','right','none']"></propertyselect>
                         </div>
                     </div>
                 </details>
