--- a/index.html
+++ b/index.html
@@ -238,8 +238,9 @@
     <template id="coordbartpl">
         <div class="coordbar" style="display: block;" v-show="shown">
             <div class="title" style="display: block;">坐标数据<button class="closeBut" @click="close">√</button></div>
-            <input type="text" @keyup="addcoord" placeholder="x y 按回车键添加项" v-model="addtext">
-            <button @click="sort">排序</button>
+            <input type="text" @keyup="addcoord" placeholder="x y 按回车添加项" v-model="addtext" v-threetip="td">
+            <button @click="sort" v-show="!td">排序</button>
+            <button @click="group" v-show="td">分组</button>
             <textarea class="coordtextb" v-model="icdata"></textarea>
         </div>
     </template>
@@ -267,7 +268,7 @@
             <div><input type="text" class="param" v-model="param" @keyup="onpachange" placeholder="参数" @focus="param_focused" @blur="param_losefocus"></div>
             <parambar ref="subparambar" v-show="paramfoc" :command="command" :etd="etd" :global="false"></parambar>
             <!-- <br> -->
-            <coordbar ref="subcoordbar" :cdata="cdata" v-show="shown"></coordbar>
+            <coordbar ref="subcoordbar" :cdata="cdata" v-show="shown" :td="etd"></coordbar>
             <div v-show="!shown"><textarea class="coordtext" v-model="cdata" placeholder="坐标数据" @focus="coord_focused" @blur="coord_losefocus"></textarea></div>
             
         </div>
