--- a/index.html
+++ b/index.html
@@ -239,8 +239,8 @@
         <div class="coordbar" style="display: block;" v-show="shown">
             <div class="title" style="display: block;">坐标数据<button class="closeBut" @click="close" title="提交坐标数据">√</button></div>
             <input type="text" @keyup="addcoord" placeholder="x y 按回车添加项" v-model="addtext" v-threetip="td">
-            <button @click="sort" v-show="!td">排序</button>
-            <button @click="group" v-show="td">分组</button>
+            <button @click="sort" v-show="!td" title="按自变量升序对坐标进行排序">排序</button>
+            <button @click="group" v-show="td" title="按y轴升序对坐标进行分组，配合surf或mesh指令">分组</button>
             <textarea class="coordtextb" v-model="icdata"></textarea>
         </div>
     </template>
